--- a/Semana05/Semana05/Semana05.csproj
+++ b/Semana05/Semana05/Semana05.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\ListaCategoriaViewModel.cs" />
+    <Compile Include="ViewModel\ManCategoriaViewModel.cs" />
+    <Compile Include="ViewModel\RelayCommand.cs" />
+    <Compile Include="ViewModel\ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -76,6 +80,7 @@
     <Compile Include="ManCategoria.xaml.cs">
       <DependentUpon>ManCategoria.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Model\CategoriaModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
